package solid_design_principal.LiskowSubsitutionPrincipal;

public interface Account {
    void deposit(double amount);
    void withdraw(double amount);
}
