package solid_design_principal.LiskowSubsitutionPrincipal;

public interface NonWithdrable {
    void deposit(double amount);
}
